packages/sycamore-macro/tests/component/inline-props-fail.stderr
error: expected `inline_props`
 --> tests/component/inline-props-fail.rs:3:13
  |
3 | #[component(not_inline_props)]
  |             ^^^^^^^^^^^^^^^^

error: receiver cannot be a prop
 --> tests/component/inline-props-fail.rs:9:17
  |
9 | fn ReceiverProp(self) -> View {
  |                 ^^^^

error: unexpected pattern, you must specify an identifier for the prop
  --> tests/component/inline-props-fail.rs:18:24
   |
18 | fn PatternWithoutIdent(Foo { bar }: Foo) -> View {
   |                        ^^^

error: `self` parameter is only allowed in associated functions
 --> tests/component/inline-props-fail.rs:9:17
  |
9 | fn ReceiverProp(self) -> View {
  |                 ^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions
